# cross-cov-gtest

./: CMakeLists.txt  README.md  compile.sh  conanfile.py
cmake/: ccache.cmake  code-coverage.cmake  compiler-config.cmake  conan_auto_install.cmake  doxygen.cmake  macros.cmake  openmp.cmake  qnx.cmake
cmake/modules/: FindPQXX.cmake  FindPostgreSQL.cmake
cmake/sanitizers/: FindASan.cmake  FindLSan.cmake  FindMSan.cmake  FindSanitizers.cmake  FindTSan.cmake  FindUBSan.cmake  sanitize-exclude-helpers.cmake  sanitize-helpers.cmake
cmake/static-analysis/: FindStaticAnalysis.cmake  clang-tidy.cmake  code-coverage.cmake  cppcheck.cmake
include/: greatestof3.h
profile/: qnx  qnx-aarch64  qnx-armv7  qnx-x86_64
src/: CMakeLists.txt  greatestof3.cpp
test_folder/: CMakeLists.txt  main_test.cpp
test_package/: CMakeLists.txt  conanfile.py  main_test.cpp
